コンパイラ入門_山下/chapt7,8/y.output
Terminals which are not used

   ERROR


Grammar

    0 $accept: Program $end

    1 Program: DAIStmts PrintStmts

    2 DAIStmts: DeclStmt SEMI
    3         | DAIStmts DAIStmt SEMI

    4 DAIStmt: DeclStmt
    5        | AssignStmt
    6        | InputStmt

    7 DeclStmt: Type VarDefs

    8 Type: INT
    9     | FLOAT

   10 VarDefs: VarDef
   11        | VarDefs COMMA VarDef

   12 VarDef: ID
   13       | ID EQ NumReal

   14 AssignStmt: ID EQ Exp

   15 InputStmt: QU VarRefs

   16 VarRefs: ID
   17        | VarRefs COMMA ID

   18 PrintStmts: /* empty */
   19           | PrintStmts PrintStmt SEMI

   20 PrintStmt: EX Exps

   21 Exps: Exp
   22     | Exps COMMA Exp

   23 Exp: Exp ADD Term
   24    | Exp SUB Term
   25    | Term

   26 Term: Term MUL Factor
   27     | Term DIV Factor
   28     | Factor

   29 Factor: ID
   30       | NumReal
   31       | LPAR Exp RPAR

   32 NumReal: NUM
   33        | REAL


Terminals, with rules where they appear

$end (0) 0
error (256)
INT (258) 8
FLOAT (259) 9
ID (260) 12 13 14 16 17 29
NUM (261) 32
REAL (262) 33
COMMA (263) 11 17 22
EQ (264) 13 14
EX (265) 20
QU (266) 15
SEMI (267) 2 3 19
ADD (268) 23
SUB (269) 24
MUL (270) 26
DIV (271) 27
LPAR (272) 31
RPAR (273) 31
ERROR (274)


Nonterminals, with rules where they appear

$accept (20)
    on left: 0
Program (21)
    on left: 1, on right: 0
DAIStmts (22)
    on left: 2 3, on right: 1 3
DAIStmt (23)
    on left: 4 5 6, on right: 3
DeclStmt (24)
    on left: 7, on right: 2 4
Type (25)
    on left: 8 9, on right: 7
VarDefs (26)
    on left: 10 11, on right: 7 11
VarDef (27)
    on left: 12 13, on right: 10 11
AssignStmt (28)
    on left: 14, on right: 5
InputStmt (29)
    on left: 15, on right: 6
VarRefs (30)
    on left: 16 17, on right: 15 17
PrintStmts (31)
    on left: 18 19, on right: 1 19
PrintStmt (32)
    on left: 20, on right: 19
Exps (33)
    on left: 21 22, on right: 20 22
Exp (34)
    on left: 23 24 25, on right: 14 21 22 23 24 31
Term (35)
    on left: 26 27 28, on right: 23 24 25 26 27
Factor (36)
    on left: 29 30 31, on right: 26 27 28
NumReal (37)
    on left: 32 33, on right: 13 30


state 0

    0 $accept: . Program $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2

    Program   go to state 3
    DAIStmts  go to state 4
    DeclStmt  go to state 5
    Type      go to state 6


state 1

    8 Type: INT .

    $default  reduce using rule 8 (Type)


state 2

    9 Type: FLOAT .

    $default  reduce using rule 9 (Type)


state 3

    0 $accept: Program . $end

    $end  shift, and go to state 7


state 4

    1 Program: DAIStmts . PrintStmts
    3 DAIStmts: DAIStmts . DAIStmt SEMI

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    ID     shift, and go to state 8
    QU     shift, and go to state 9

    $default  reduce using rule 18 (PrintStmts)

    DAIStmt     go to state 10
    DeclStmt    go to state 11
    Type        go to state 6
    AssignStmt  go to state 12
    InputStmt   go to state 13
    PrintStmts  go to state 14


state 5

    2 DAIStmts: DeclStmt . SEMI

    SEMI  shift, and go to state 15


state 6

    7 DeclStmt: Type . VarDefs

    ID  shift, and go to state 16

    VarDefs  go to state 17
    VarDef   go to state 18


state 7

    0 $accept: Program $end .

    $default  accept


state 8

   14 AssignStmt: ID . EQ Exp

    EQ  shift, and go to state 19


state 9

   15 InputStmt: QU . VarRefs

    ID  shift, and go to state 20

    VarRefs  go to state 21


state 10

    3 DAIStmts: DAIStmts DAIStmt . SEMI

    SEMI  shift, and go to state 22


state 11

    4 DAIStmt: DeclStmt .

    $default  reduce using rule 4 (DAIStmt)


state 12

    5 DAIStmt: AssignStmt .

    $default  reduce using rule 5 (DAIStmt)


state 13

    6 DAIStmt: InputStmt .

    $default  reduce using rule 6 (DAIStmt)


state 14

    1 Program: DAIStmts PrintStmts .
   19 PrintStmts: PrintStmts . PrintStmt SEMI

    EX  shift, and go to state 23

    $default  reduce using rule 1 (Program)

    PrintStmt  go to state 24


state 15

    2 DAIStmts: DeclStmt SEMI .

    $default  reduce using rule 2 (DAIStmts)


state 16

   12 VarDef: ID .
   13       | ID . EQ NumReal

    EQ  shift, and go to state 25

    $default  reduce using rule 12 (VarDef)


state 17

    7 DeclStmt: Type VarDefs .
   11 VarDefs: VarDefs . COMMA VarDef

    COMMA  shift, and go to state 26

    $default  reduce using rule 7 (DeclStmt)


state 18

   10 VarDefs: VarDef .

    $default  reduce using rule 10 (VarDefs)


state 19

   14 AssignStmt: ID EQ . Exp

    ID    shift, and go to state 27
    NUM   shift, and go to state 28
    REAL  shift, and go to state 29
    LPAR  shift, and go to state 30

    Exp      go to state 31
    Term     go to state 32
    Factor   go to state 33
    NumReal  go to state 34


state 20

   16 VarRefs: ID .

    $default  reduce using rule 16 (VarRefs)


state 21

   15 InputStmt: QU VarRefs .
   17 VarRefs: VarRefs . COMMA ID

    COMMA  shift, and go to state 35

    $default  reduce using rule 15 (InputStmt)


state 22

    3 DAIStmts: DAIStmts DAIStmt SEMI .

    $default  reduce using rule 3 (DAIStmts)


state 23

   20 PrintStmt: EX . Exps

    ID    shift, and go to state 27
    NUM   shift, and go to state 28
    REAL  shift, and go to state 29
    LPAR  shift, and go to state 30

    Exps     go to state 36
    Exp      go to state 37
    Term     go to state 32
    Factor   go to state 33
    NumReal  go to state 34


state 24

   19 PrintStmts: PrintStmts PrintStmt . SEMI

    SEMI  shift, and go to state 38


state 25

   13 VarDef: ID EQ . NumReal

    NUM   shift, and go to state 28
    REAL  shift, and go to state 29

    NumReal  go to state 39


state 26

   11 VarDefs: VarDefs COMMA . VarDef

    ID  shift, and go to state 16

    VarDef  go to state 40


state 27

   29 Factor: ID .

    $default  reduce using rule 29 (Factor)


state 28

   32 NumReal: NUM .

    $default  reduce using rule 32 (NumReal)


state 29

   33 NumReal: REAL .

    $default  reduce using rule 33 (NumReal)


state 30

   31 Factor: LPAR . Exp RPAR

    ID    shift, and go to state 27
    NUM   shift, and go to state 28
    REAL  shift, and go to state 29
    LPAR  shift, and go to state 30

    Exp      go to state 41
    Term     go to state 32
    Factor   go to state 33
    NumReal  go to state 34


state 31

   14 AssignStmt: ID EQ Exp .
   23 Exp: Exp . ADD Term
   24    | Exp . SUB Term

    ADD  shift, and go to state 42
    SUB  shift, and go to state 43

    $default  reduce using rule 14 (AssignStmt)


state 32

   25 Exp: Term .
   26 Term: Term . MUL Factor
   27     | Term . DIV Factor

    MUL  shift, and go to state 44
    DIV  shift, and go to state 45

    $default  reduce using rule 25 (Exp)


state 33

   28 Term: Factor .

    $default  reduce using rule 28 (Term)


state 34

   30 Factor: NumReal .

    $default  reduce using rule 30 (Factor)


state 35

   17 VarRefs: VarRefs COMMA . ID

    ID  shift, and go to state 46


state 36

   20 PrintStmt: EX Exps .
   22 Exps: Exps . COMMA Exp

    COMMA  shift, and go to state 47

    $default  reduce using rule 20 (PrintStmt)


state 37

   21 Exps: Exp .
   23 Exp: Exp . ADD Term
   24    | Exp . SUB Term

    ADD  shift, and go to state 42
    SUB  shift, and go to state 43

    $default  reduce using rule 21 (Exps)


state 38

   19 PrintStmts: PrintStmts PrintStmt SEMI .

    $default  reduce using rule 19 (PrintStmts)


state 39

   13 VarDef: ID EQ NumReal .

    $default  reduce using rule 13 (VarDef)


state 40

   11 VarDefs: VarDefs COMMA VarDef .

    $default  reduce using rule 11 (VarDefs)


state 41

   23 Exp: Exp . ADD Term
   24    | Exp . SUB Term
   31 Factor: LPAR Exp . RPAR

    ADD   shift, and go to state 42
    SUB   shift, and go to state 43
    RPAR  shift, and go to state 48


state 42

   23 Exp: Exp ADD . Term

    ID    shift, and go to state 27
    NUM   shift, and go to state 28
    REAL  shift, and go to state 29
    LPAR  shift, and go to state 30

    Term     go to state 49
    Factor   go to state 33
    NumReal  go to state 34


state 43

   24 Exp: Exp SUB . Term

    ID    shift, and go to state 27
    NUM   shift, and go to state 28
    REAL  shift, and go to state 29
    LPAR  shift, and go to state 30

    Term     go to state 50
    Factor   go to state 33
    NumReal  go to state 34


state 44

   26 Term: Term MUL . Factor

    ID    shift, and go to state 27
    NUM   shift, and go to state 28
    REAL  shift, and go to state 29
    LPAR  shift, and go to state 30

    Factor   go to state 51
    NumReal  go to state 34


state 45

   27 Term: Term DIV . Factor

    ID    shift, and go to state 27
    NUM   shift, and go to state 28
    REAL  shift, and go to state 29
    LPAR  shift, and go to state 30

    Factor   go to state 52
    NumReal  go to state 34


state 46

   17 VarRefs: VarRefs COMMA ID .

    $default  reduce using rule 17 (VarRefs)


state 47

   22 Exps: Exps COMMA . Exp

    ID    shift, and go to state 27
    NUM   shift, and go to state 28
    REAL  shift, and go to state 29
    LPAR  shift, and go to state 30

    Exp      go to state 53
    Term     go to state 32
    Factor   go to state 33
    NumReal  go to state 34


state 48

   31 Factor: LPAR Exp RPAR .

    $default  reduce using rule 31 (Factor)


state 49

   23 Exp: Exp ADD Term .
   26 Term: Term . MUL Factor
   27     | Term . DIV Factor

    MUL  shift, and go to state 44
    DIV  shift, and go to state 45

    $default  reduce using rule 23 (Exp)


state 50

   24 Exp: Exp SUB Term .
   26 Term: Term . MUL Factor
   27     | Term . DIV Factor

    MUL  shift, and go to state 44
    DIV  shift, and go to state 45

    $default  reduce using rule 24 (Exp)


state 51

   26 Term: Term MUL Factor .

    $default  reduce using rule 26 (Term)


state 52

   27 Term: Term DIV Factor .

    $default  reduce using rule 27 (Term)


state 53

   22 Exps: Exps COMMA Exp .
   23 Exp: Exp . ADD Term
   24    | Exp . SUB Term

    ADD  shift, and go to state 42
    SUB  shift, and go to state 43

    $default  reduce using rule 22 (Exps)
